[tool.poetry]
name = "ununzip"
version = "1.0"
description = "Delete all files present in a given folder from a given unzipped .zip file."
authors = ["Taylor-Jayde Blackstone <t.blackstone@inspyre.tech>"]
license = "MIT"
packages = [
    { include = "ununzip" }
]

[tool.poetry.dependencies]
python = "^3.8"
inspy-logger = "2.1a14"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
Sphinx = "^5.1.1"
ptipython = "^1.0.1"

[tool.poetry.scripts]
ununzip = "ununzip.app:main"

[tool.poetry.urls]
"Author Homepage" = "https://softworks.inspyre.tech"
"Github" = "https://github.com/tayjaybabee/ununzip"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
